src/grammar/.antlr/OPLangParser.py
# Generated from d:/Project/OPLang-Compiler-Lite/src/grammar/OPLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OPLangParser ( Parser ):

    grammarFileName = "OPLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'['", "']'", "'{'", "'}'", "'('", "')'", "';'", "':'", 
                     "'.'", "','", "':='", "'+'", "'-'", "'*'", "'/'", "'\\'", 
                     "'%'", "'!='", "'=='", "'<'", "'>'", "'<='", "'>='", 
                     "'||'", "'&&'", "'!'", "'^'", "'~'", "'&'", "'class'", 
                     "'extends'", "'final'", "'static'", "'if'", "'then'", 
                     "'else'", "'for'", "'to'", "'downto'", "'do'", "'return'", 
                     "'break'", "'continue'", "'new'", "'this'", "'nil'", 
                     "'boolean'", "'int'", "'float'", "'string'", "'void'", 
                     "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "WS", "LINE_CMT", "BLOCK_CMT", "LSB", 
                      "RSB", "LCB", "RCB", "LP", "RP", "SEMI", "COLON", 
                      "DOT", "COMMA", "ASSIGN", "ADD", "SUB", "MUL", "DIV", 
                      "IDIV", "MOD", "NEQ", "EQ", "LT", "GT", "LE", "GE", 
                      "OR", "AND", "NOT", "CONCAT", "TILDE", "AMP", "CLASS", 
                      "EXTENDS", "FINAL", "STATIC", "IF", "THEN", "ELSE", 
                      "FOR", "TO", "DOWNTO", "DO", "RETURN", "BREAK", "CONTINUE", 
                      "NEW", "THIS", "NIL", "BOOLEAN", "INT", "FLOAT", "STRING", 
                      "VOID", "TRUE", "FALSE", "ID", "INTLIT", "FLOATLIT", 
                      "STRINGLIT", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_classdecllist = 1
    RULE_classdecllisttail = 2
    RULE_classdecl = 3
    RULE_extendsclause = 4
    RULE_memberdecl = 5
    RULE_memberdecllistopt = 6
    RULE_memberdecllist = 7
    RULE_memberdecllisttail = 8
    RULE_attributedecl = 9
    RULE_attributemodsopt = 10
    RULE_attributemods = 11
    RULE_refmarker = 12
    RULE_refmarkeropt = 13
    RULE_attrlist = 14
    RULE_attrlisttail = 15
    RULE_attrinit = 16
    RULE_attrinitassignopt = 17
    RULE_methoddecl = 18
    RULE_staticopt = 19
    RULE_returntyp = 20
    RULE_constructordecl = 21
    RULE_destructordecl = 22
    RULE_paramlistopt = 23
    RULE_paramlist = 24
    RULE_paramlisttail = 25
    RULE_paramdecl = 26
    RULE_idlist = 27
    RULE_idlisttail = 28
    RULE_blockstmt = 29
    RULE_localvardecllistopt = 30
    RULE_localvardecllist = 31
    RULE_stmtlistopt = 32
    RULE_stmtlist = 33
    RULE_localvardecl = 34
    RULE_finalopt = 35
    RULE_localvarlist = 36
    RULE_localvarlisttail = 37
    RULE_localvarinit = 38
    RULE_localvarinitassignopt = 39
    RULE_stmt = 40
    RULE_assignstmt = 41
    RULE_lhs = 42
    RULE_lhssuffixopt = 43
    RULE_lhssuffix = 44
    RULE_lhssuffixthis = 45
    RULE_lhsdotseq = 46
    RULE_lhsdotseqnoendinvoke = 47
    RULE_lhsdotseqtail = 48
    RULE_lhsdotop = 49
    RULE_lhsindexseq = 50
    RULE_lhsindexseqopt = 51
    RULE_lhsbase = 52
    RULE_ifstmt = 53
    RULE_forstmt = 54
    RULE_fordirection = 55
    RULE_breakstmt = 56
    RULE_continuestmt = 57
    RULE_returnstmt = 58
    RULE_expropt = 59
    RULE_callstmt = 60
    RULE_callpreinvoke = 61
    RULE_calltail = 62
    RULE_memberinvokeseg = 63
    RULE_callpostinvoke = 64
    RULE_callpostinvoketok = 65
    RULE_expr = 66
    RULE_exprrelational = 67
    RULE_exprrelationalopt = 68
    RULE_relationalop = 69
    RULE_exprequality = 70
    RULE_exprequalityopt = 71
    RULE_equalityop = 72
    RULE_exprlogic = 73
    RULE_exprlogictail = 74
    RULE_logicop = 75
    RULE_expradd = 76
    RULE_expraddtail = 77
    RULE_addop = 78
    RULE_exprmul = 79
    RULE_exprmultail = 80
    RULE_mulop = 81
    RULE_exprconcat = 82
    RULE_exprconcattail = 83
    RULE_exprunary = 84
    RULE_notseq = 85
    RULE_signseq = 86
    RULE_sign = 87
    RULE_exprpostfix = 88
    RULE_postfixtailopt = 89
    RULE_postfixtail = 90
    RULE_dotseq = 91
    RULE_dotop = 92
    RULE_indexseq = 93
    RULE_indexop = 94
    RULE_memberaccess = 95
    RULE_memberinvoke = 96
    RULE_arglistopt = 97
    RULE_arglist = 98
    RULE_arglisttail = 99
    RULE_primary = 100
    RULE_newexpr = 101
    RULE_arrayliteral = 102
    RULE_arrayliteraltailopt = 103
    RULE_arrayliteraltail = 104
    RULE_arrayelement = 105
    RULE_literal = 106
    RULE_typ = 107
    RULE_primtyp = 108
    RULE_arraytyp = 109
    RULE_arrayelementtyp = 110
    RULE_classtyp = 111

    ruleNames =  [ "program", "classdecllist", "classdecllisttail", "classdecl", 
                   "extendsclause", "memberdecl", "memberdecllistopt", "memberdecllist", 
                   "memberdecllisttail", "attributedecl", "attributemodsopt", 
                   "attributemods", "refmarker", "refmarkeropt", "attrlist", 
                   "attrlisttail", "attrinit", "attrinitassignopt", "methoddecl", 
                   "staticopt", "returntyp", "constructordecl", "destructordecl", 
                   "paramlistopt", "paramlist", "paramlisttail", "paramdecl", 
                   "idlist", "idlisttail", "blockstmt", "localvardecllistopt", 
                   "localvardecllist", "stmtlistopt", "stmtlist", "localvardecl", 
                   "finalopt", "localvarlist", "localvarlisttail", "localvarinit", 
                   "localvarinitassignopt", "stmt", "assignstmt", "lhs", 
                   "lhssuffixopt", "lhssuffix", "lhssuffixthis", "lhsdotseq", 
                   "lhsdotseqnoendinvoke", "lhsdotseqtail", "lhsdotop", 
                   "lhsindexseq", "lhsindexseqopt", "lhsbase", "ifstmt", 
                   "forstmt", "fordirection", "breakstmt", "continuestmt", 
                   "returnstmt", "expropt", "callstmt", "callpreinvoke", 
                   "calltail", "memberinvokeseg", "callpostinvoke", "callpostinvoketok", 
                   "expr", "exprrelational", "exprrelationalopt", "relationalop", 
                   "exprequality", "exprequalityopt", "equalityop", "exprlogic", 
                   "exprlogictail", "logicop", "expradd", "expraddtail", 
                   "addop", "exprmul", "exprmultail", "mulop", "exprconcat", 
                   "exprconcattail", "exprunary", "notseq", "signseq", "sign", 
                   "exprpostfix", "postfixtailopt", "postfixtail", "dotseq", 
                   "dotop", "indexseq", "indexop", "memberaccess", "memberinvoke", 
                   "arglistopt", "arglist", "arglisttail", "primary", "newexpr", 
                   "arrayliteral", "arrayliteraltailopt", "arrayliteraltail", 
                   "arrayelement", "literal", "typ", "primtyp", "arraytyp", 
                   "arrayelementtyp", "classtyp" ]

    EOF = Token.EOF
    WS=1
    LINE_CMT=2
    BLOCK_CMT=3
    LSB=4
    RSB=5
    LCB=6
    RCB=7
    LP=8
    RP=9
    SEMI=10
    COLON=11
    DOT=12
    COMMA=13
    ASSIGN=14
    ADD=15
    SUB=16
    MUL=17
    DIV=18
    IDIV=19
    MOD=20
    NEQ=21
    EQ=22
    LT=23
    GT=24
    LE=25
    GE=26
    OR=27
    AND=28
    NOT=29
    CONCAT=30
    TILDE=31
    AMP=32
    CLASS=33
    EXTENDS=34
    FINAL=35
    STATIC=36
    IF=37
    THEN=38
    ELSE=39
    FOR=40
    TO=41
    DOWNTO=42
    DO=43
    RETURN=44
    BREAK=45
    CONTINUE=46
    NEW=47
    THIS=48
    NIL=49
    BOOLEAN=50
    INT=51
    FLOAT=52
    STRING=53
    VOID=54
    TRUE=55
    FALSE=56
    ID=57
    INTLIT=58
    FLOATLIT=59
    STRINGLIT=60
    ILLEGAL_ESCAPE=61
    UNCLOSE_STRING=62
    ERROR_CHAR=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classdecllist(self):
            return self.getTypedRuleContext(OPLangParser.ClassdecllistContext,0)


        def EOF(self):
            return self.getToken(OPLangParser.EOF, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = OPLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 224
            self.classdecllist()
            self.state = 225
            self.match(OPLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classdecl(self):
            return self.getTypedRuleContext(OPLangParser.ClassdeclContext,0)


        def classdecllisttail(self):
            return self.getTypedRuleContext(OPLangParser.ClassdecllisttailContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_classdecllist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassdecllist" ):
                listener.enterClassdecllist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassdecllist" ):
                listener.exitClassdecllist(self)




    def classdecllist(self):

        localctx = OPLangParser.ClassdecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classdecllist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 227
            self.classdecl()
            self.state = 228
            self.classdecllisttail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdecllisttailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classdecl(self):
            return self.getTypedRuleContext(OPLangParser.ClassdeclContext,0)


        def classdecllisttail(self):
            return self.getTypedRuleContext(OPLangParser.ClassdecllisttailContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_classdecllisttail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassdecllisttail" ):
                listener.enterClassdecllisttail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassdecllisttail" ):
                listener.exitClassdecllisttail(self)




    def classdecllisttail(self):

        localctx = OPLangParser.ClassdecllisttailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classdecllisttail)
        try:
            self.state = 234
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [33]:
                self.enterOuterAlt(localctx, 1)
                self.state = 230
                self.classdecl()
                self.state = 231
                self.classdecllisttail()
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(OPLangParser.CLASS, 0)

        def ID(self):
            return self.getToken(OPLangParser.ID, 0)

        def extendsclause(self):
            return self.getTypedRuleContext(OPLangParser.ExtendsclauseContext,0)


        def LCB(self):
            return self.getToken(OPLangParser.LCB, 0)

        def memberdecllistopt(self):
            return self.getTypedRuleContext(OPLangParser.MemberdecllistoptContext,0)


        def RCB(self):
            return self.getToken(OPLangParser.RCB, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_classdecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassdecl" ):
                listener.enterClassdecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassdecl" ):
                listener.exitClassdecl(self)




    def classdecl(self):

        localctx = OPLangParser.ClassdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 236
            self.match(OPLangParser.CLASS)
            self.state = 237
            self.match(OPLangParser.ID)
            self.state = 238
            self.extendsclause()
            self.state = 239
            self.match(OPLangParser.LCB)
            self.state = 240
            self.memberdecllistopt()
            self.state = 241
            self.match(OPLangParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExtendsclauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXTENDS(self):
            return self.getToken(OPLangParser.EXTENDS, 0)

        def ID(self):
            return self.getToken(OPLangParser.ID, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_extendsclause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExtendsclause" ):
                listener.enterExtendsclause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExtendsclause" ):
                listener.exitExtendsclause(self)




    def extendsclause(self):

        localctx = OPLangParser.ExtendsclauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_extendsclause)
        try:
            self.state = 246
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [34]:
                self.enterOuterAlt(localctx, 1)
                self.state = 243
                self.match(OPLangParser.EXTENDS)
                self.state = 244
                self.match(OPLangParser.ID)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributedecl(self):
            return self.getTypedRuleContext(OPLangParser.AttributedeclContext,0)


        def methoddecl(self):
            return self.getTypedRuleContext(OPLangParser.MethoddeclContext,0)


        def constructordecl(self):
            return self.getTypedRuleContext(OPLangParser.ConstructordeclContext,0)


        def destructordecl(self):
            return self.getTypedRuleContext(OPLangParser.DestructordeclContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_memberdecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMemberdecl" ):
                listener.enterMemberdecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMemberdecl" ):
                listener.exitMemberdecl(self)




    def memberdecl(self):

        localctx = OPLangParser.MemberdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_memberdecl)
        try:
            self.state = 252
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 248
                self.attributedecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 249
                self.methoddecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 250
                self.constructordecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 251
                self.destructordecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberdecllistoptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def memberdecllist(self):
            return self.getTypedRuleContext(OPLangParser.MemberdecllistContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_memberdecllistopt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMemberdecllistopt" ):
                listener.enterMemberdecllistopt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMemberdecllistopt" ):
                listener.exitMemberdecllistopt(self)




    def memberdecllistopt(self):

        localctx = OPLangParser.MemberdecllistoptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_memberdecllistopt)
        try:
            self.state = 256
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31, 35, 36, 50, 51, 52, 53, 54, 57]:
                self.enterOuterAlt(localctx, 1)
                self.state = 254
                self.memberdecllist()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberdecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def memberdecl(self):
            return self.getTypedRuleContext(OPLangParser.MemberdeclContext,0)


        def memberdecllisttail(self):
            return self.getTypedRuleContext(OPLangParser.MemberdecllisttailContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_memberdecllist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMemberdecllist" ):
                listener.enterMemberdecllist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMemberdecllist" ):
                listener.exitMemberdecllist(self)




    def memberdecllist(self):

        localctx = OPLangParser.MemberdecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_memberdecllist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 258
            self.memberdecl()
            self.state = 259
            self.memberdecllisttail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberdecllisttailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def memberdecl(self):
            return self.getTypedRuleContext(OPLangParser.MemberdeclContext,0)


        def memberdecllisttail(self):
            return self.getTypedRuleContext(OPLangParser.MemberdecllisttailContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_memberdecllisttail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMemberdecllisttail" ):
                listener.enterMemberdecllisttail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMemberdecllisttail" ):
                listener.exitMemberdecllisttail(self)




    def memberdecllisttail(self):

        localctx = OPLangParser.MemberdecllisttailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_memberdecllisttail)
        try:
            self.state = 265
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31, 35, 36, 50, 51, 52, 53, 54, 57]:
                self.enterOuterAlt(localctx, 1)
                self.state = 261
                self.memberdecl()
                self.state = 262
                self.memberdecllisttail()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributedeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributemodsopt(self):
            return self.getTypedRuleContext(OPLangParser.AttributemodsoptContext,0)


        def typ(self):
            return self.getTypedRuleContext(OPLangParser.TypContext,0)


        def refmarkeropt(self):
            return self.getTypedRuleContext(OPLangParser.RefmarkeroptContext,0)


        def attrlist(self):
            return self.getTypedRuleContext(OPLangParser.AttrlistContext,0)


        def SEMI(self):
            return self.getToken(OPLangParser.SEMI, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_attributedecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributedecl" ):
                listener.enterAttributedecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributedecl" ):
                listener.exitAttributedecl(self)




    def attributedecl(self):
